# Tagdeck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_UPLOAD_NOTES.md  IMPLEMENTATION_LOG.md  README.md  README_TESTER.txt  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: LOCAL_FIRST.md  METADATA_MODEL.md  MOBILE_SYNC_READINESS.md  PRODUCT_VISION.md  ROADMAP.md  TRACK_WORKSPACE_ROADMAP.md  UPDATES.md
docs/examples/: latest.json  latest.txt  tagdeck_download_page.md  tagdeck_release_notes_1.4.0-beta.1.md  tagdeck_release_notes_1.4.0-beta.2.md  tagdeck_release_notes_1.4.0.md
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_creative_library.sql  0003_beta_095_workflow.sql  0004_explorer_curation.sql  0005_curation_mood.sql  0006_internal_playlists.sql  0007_app_settings.sql  0008_scan_roots.sql  0009_generation_model.sql  0010_mobile_sync_readiness.sql  0011_reddit_validation_build.sql  0012_library_performance_indexes.sql  0013_internal_organization_editor.sql
src-tauri/src/: commands.rs  database.rs  error.rs  importer.rs  lib.rs  main.rs  metadata.rs  metadata_writer.rs  models.rs  player.rs  scanner.rs  state.rs  transfer.rs  updates.rs
src/components/: AppLayout.tsx  OnboardingDialog.tsx  PanelZoomControls.tsx  PlayerBar.test.tsx  PlayerBar.tsx  SectionOnboardingDialog.test.tsx  SectionOnboardingDialog.tsx
src/i18n/: en.ts  es.ts  i18n.test.ts  index.ts  systemLabels.ts
(+57 files in other folders)
